# frontierbrain3

./: .gitignore  README.md  README_with_output.md  __init__.py  damagecalc.py  dome.py  examples.py  factory.py  frontier_db.py  frontierutils.py  pike.py  pyproject.toml  pyramid.py  temp.py  tower.py
Data/: bf_pokemon.json  bf_trainers.json  items.json  moves.json
facilities/: arena.py  factory.py  palace.py
frontierbrain3/: __init__.py  damagecalc.py  frontier_db.py  frontierutils.py  temp.py
frontierbrain3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontierbrain3/data/: abilities.json  bf_pokemon.json  bf_trainers.json  pokemon.json
frontierbrain3/facilities/: dome.py  factory.py  palace.py  pike.py  pyramid.py  tower.py
