[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontierbrain3"
version = "0.1.1"
description = "Data analysis tools for Pokemon Emerald's Battle Frontier"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Noah Kaufmann"},
]

[project.urls]
Homepage = "https://github.com/NJKMath/frontierbrain3"
Repository = "https://github.com/NJKMath/frontierbrain3"
Issues = "https://github.com/NJKMath/frontierbrain3/issues"

[tool.setuptools.packages.find]
include = ["frontierbrain3*"]

[tool.setuptools.package-data]
frontierbrain3 = ["data/*.json"]